--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
                 android:layout_height="wrap_content"
                 android:layout_column="0"
                 android:text="Please choose between:"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
         </TableRow>
 
         <TableRow
@@ -42,6 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
+                android:onClick="openTextActivity"
                 android:text="Start" />
         </TableRow>
 
@@ -58,10 +59,11 @@
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/buttonStartClickActivity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
+                android:onClick="openClickActivity"
                 android:text="Start" />
         </TableRow>
 
@@ -70,7 +72,7 @@
             android:layout_height="fill_parent">
 
             <TextView
-                android:id="@+id/textViewConfirmActivity"
+                android:id="@+id/textViewStartConfirmActivity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
@@ -78,10 +80,11 @@
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <Button
-                android:id="@+id/buttonConfirmActivity"
+                android:id="@+id/buttonStartConfirmActivity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
+                android:onClick="openConfirmActivity"
                 android:text="Start" />
         </TableRow>
     </TableLayout>
