--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -11,7 +11,7 @@
     tools:context="com.dotwee.openkwsolver.TextActivity">
 
     <ImageView
-        android:id="@+id/imageViewCaptchaText"
+        android:id="@+id/imageViewCaptcha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
