Rename buttonLeft to buttonPull Rename buttonRight to buttonSend Introduce buttonSkip

--- a/app/src/main/res/layout/activity_click.xml
+++ b/app/src/main/res/layout/activity_click.xml
@@ -27,7 +27,7 @@
         android:layout_below="@+id/imageViewClickCaptcha" />
 
     <Button
-        android:id="@+id/buttonRight"
+        android:id="@+id/buttonSend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/buttonRight"
+        android:layout_below="@+id/buttonSend"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
