Move Servercheck-TextViews to left bottom

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,8 +85,8 @@
             android:id="@+id/textViewQueue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/textViewCurrent"
-            android:layout_alignParentEnd="true"
+            android:layout_alignBottom="@+id/textViewCurrent"
+            android:layout_alignParentStart="true"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TextView
@@ -94,7 +94,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/textViewQueue"
-            android:layout_alignEnd="@+id/textViewQueue"
+            android:layout_alignParentStart="true"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
     </RelativeLayout>
