Let user decide auto-pull next captcha (WIP)

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -20,6 +20,9 @@
         <item
             android:id="@+id/action_selfonly"
             android:title="Self only" />
+        <item
+            android:id="@+id/action_loop"
+            android:title="Auto pull" />
     </group>
 
 </menu>
