--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,25 +4,11 @@
 
     <item
         android:id="@+id/action_stop"
-        android:showAsAction="never"
         android:title="Stop" />
 
     <item
-        android:id="@+id/action_enter_api"
+        android:id="@+id/action_settings"
         android:icon="@drawable/ic_key_white_48dp"
-        android:showAsAction="withText|ifRoom"
-        android:title="API" />
-
-    <group android:checkableBehavior="all">
-        <item
-            android:id="@+id/action_debug"
-            android:title="Debug" />
-        <item
-            android:id="@+id/action_selfonly"
-            android:title="Self only" />
-        <item
-            android:id="@+id/action_loop"
-            android:title="Auto pull" />
-    </group>
+        android:title="Settings"/>
 
 </menu>
