--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,6 +9,6 @@
     <item
         android:id="@+id/action_settings"
         android:icon="@drawable/ic_key_white_48dp"
-        android:title="Settings"/>
+        android:title="@string/action_settings"/>
 
 </menu>
