--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,12 +2,14 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
         android:key="pref_key_default"
-        android:title="Benutzereinstellungen">
+        android:title="@string/title_activity_preference">
 
         <EditTextPreference
             android:contentDescription="Your 9kw API-Key"
             android:key="apikey"
             android:title="API-Key"/>
+
+        <!--
 
         <MultiSelectListPreference
             android:dialogMessage="Select your primary Captcha type:"
@@ -16,6 +18,8 @@
             android:entryValues="@array/prefs_multi_types"
             android:key="pref_key_captcha_type"
             android:title="Captcha-Type"/>
+        
+        -->
 
     </PreferenceCategory>
 </PreferenceScreen>
