Resources: Update Translations

--- a/app/src/main/res/values-de/arrays.xml
+++ b/app/src/main/res/values-de/arrays.xml
@@ -3,7 +3,7 @@
 
     <string-array name="prefs_multi_types">
         <item>Debug</item>
-        <item>Self only</item>
+        <item>Nur eigene</item>
     </string-array>
 
 </resources>
