MainActivity: Fix loop-mode (and add preferences for it)

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -9,6 +9,12 @@
             android:key="apikey"
             android:title="API-Key"/>
 
+        <CheckBoxPreference
+            android:contentDescription="Auto-pull next Captcha"
+            android:defaultValue="true"
+            android:key="loop"
+            android:title="Loop-Mode"/>
+
         <!--
 
         <MultiSelectListPreference
