--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,13 +2,12 @@
 
     <!-- inherit from the material theme -->
     <style name="AppTheme" parent="Theme.AppCompat">
+
         <!-- Main theme colors -->
-        <!--   your app branding color for the app bar -->
         <item name="colorPrimary">@color/primary</item>
-        <!--   darker variant for the status bar and contextual app bars -->
         <item name="colorPrimaryDark">@color/primary_dark</item>
-        <!--   theme UI controls like checkboxes and text fields -->
         <item name="colorAccent">@color/accent</item>
+        <item name="navigationBarColor">@color/primary_dark</item>
     </style>
 
 </resources>
