--- a/app/src/main/res/xml/pref_automation.xml
+++ b/app/src/main/res/xml/pref_automation.xml
@@ -4,6 +4,7 @@
     <PreferenceCategory android:title="Automation Settings">
         <CheckBoxPreference
             android:contentDescription="Auto-pull next Captcha after skipping or sending"
+            android:defaultValue="true"
             android:key="pref_automation_loop"
             android:title="Loop-Mode"/>
 
