--- a/app/src/main/res/menu/menu_global.xml
+++ b/app/src/main/res/menu/menu_global.xml
@@ -1,9 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context=".MainActivity">
+      tools:context="de.dotwee.openkwsolver.SettingsActivity">
+
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="100"
+        android:title="@string/action_settings"/>
 
     <item
         android:id="@+id/action_stop"
-        android:title="Stop"/>
+        android:orderInCategory="200"
+        android:title="Close"/>
 
 </menu>
