Project: Minor changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,6 +78,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="1"
+                android:fontFamily="sans-serif-light"
+                android:textAlignment="textStart"
                 android:textAppearance="?android:attr/textAppearanceLarge"/>
 
             <Button
